--- a/index.html
+++ b/index.html
@@ -5,3 +5,14 @@
 BONUS POINT: Nest an image tag inside of the div element. Use this for your image source: http://placekitten.com/g/300/300. Your image tag should include the image source and an alt attribute.-->
 
 <!DOCTYPE html>
+<html>
+  <head>
+    <title>Harrison Nguyen</title>
+  </head>
+  <body>
+    <div>
+      <h1>Harrison Nguyen</h1>
+      <img src="http://placekitten.com/g/300/300" alt="kitten">
+    </div>
+  </body>
+</html>
